--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,21 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
-
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      $ProjectJsonObject = (Get-Content $(ProjectJsonPath)) -join "`n" | ConvertFrom-Json
+      $ProjectVersion =$ProjectJsonObject.projectVersion
+      
+      $projectVersionTokens = $ProjectVersion.Split(".")
+      $major = $projectVersionTokens[0]
+      $minor = $projectVersionTokens[1]
+      $revNumber = git rev-list HEAD --count
+      
+      Write-Output ("##vso[task.setvariable variable=Major;]$major")
+      Write-Output ("##vso[task.setvariable variable=Minor;]$minor")
+      Write-Output ("##vso[task.setvariable variable=RevisionNumber;]$revNumber")
 - task: UiPathPackage@1
   inputs:
     packageAction: 'pack'
