--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,9 +32,10 @@ steps:
 - task: UiPathPackage@1
   inputs:
     packageAction: 'pack'
-    versioningType: 'autoversion'
+    versioningType: 'userversion'
+    version: '$(Major).$(Minor).$(Build.BuildNumber).$(RevisionNumber)'
     platformVersion: '19.10.5'
-    uninstallOption: 'ifany'
+    uninstallOption: 'ifdifferent'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
