Update azure-pipelines.yml for Azure Pipelines
Fixing Output path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,7 @@ steps:
     version: '$(Major).$(Minor).$(Build.BuildNumber).$(RevisionNumber)'
     platformVersion: '19.10.5'
     uninstallOption: 'ifdifferent'
+    outputFolder: '$(Build.ArtifactStagingDirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
