--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ steps:
   inputs:
     packageAction: 'pack'
     versioningType: 'userversion'
-    version: '$(Major).$(Minor).$(Build.BuildNumber).$(RevisionNumber)'
+    version: '$(Major).$(Minor).$(RevisionNumber)'
     platformVersion: '19.10.5'
     uninstallOption: 'ifdifferent'
     outputFolder: '$(Build.ArtifactStagingDirectory)'
