--- a/project.json
+++ b/project.json
@@ -4,6 +4,7 @@
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.8.2-preview]",
+    "UiPath.Form.Activities": "[1.0.1]",
     "UiPath.Mail.Activities": "[1.8.2-preview]",
     "UiPath.System.Activities": "[20.3.0-preview]",
     "UiPath.UIAutomation.Activities": "[20.3.0-alpha]"
