--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,6 +40,12 @@ steps:
     platformVersion: '19.10.5'
     uninstallOption: 'ifdifferent'
     outputFolder: '$(Build.ArtifactStagingDirectory)'
+
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: '& ''C:\Program Files (x86)\UiPath\Studio\UiPath.Studio.CommandLine.exe'' --help'
+
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
