--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,8 +44,10 @@ steps:
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
-    script: '& ''C:\Program Files (x86)\UiPath\Studio\UiPath.Studio.CommandLine.exe'' --help'
-
+    script: |
+      cd C:\Program Files (x86)\UiPath\Studio 
+      .\UiPath.Studio.CommandLine.exe analyze -p D:/a/1/s/project.json
+      
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
